--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <i class="fas fa-angle-double-right"></i>
                 ¿Qué alien de Star Wars eres?
             </h1>
-            <p>Elige un personaje de este grupo</p>
+            <p>Elige una especie de este grupo de personajes</p>
         </header>
 
         <div class="containerChoices" id="containerChoices">
